Task/issue 1172 dark theme color contrast (#1193)
* Fix #1172 - fix for input-group color dark table.

* Fix #1172 - added table-hover for table.

* Fix #1171 - increase color contrast for light text on dark background.

* Fix #1172 - ligther green for breadcrumb link color.

* Fix #1172 - call built-in bootstrap function color-yiq for showing
contrasted text-color.

* Fix #1172 - added color-yiq function for list-group-item-secondar.

* Fix #1172 - lighten color for dark theme, list-group-item colors.

* Fix #1172 - added utility class for adjusting the the color contrast for
accessibility.

* Fix #1172 - adjust color contrast only for 1).btn classes, 2) for
link-colors.

* Fix #1172 - added color-yiq call for list-group-item-dark.

* Fix #1172 - fix for input-group color dark table.

* Fix #1172 - added table-hover for table.

* Fix #1171 - increase color contrast for light text on dark background.

* Fix #1172 - ligther green for breadcrumb link color.

* Fix #1172 - call built-in bootstrap function color-yiq for showing
contrasted text-color.

* Fix #1172 - added color-yiq function for list-group-item-secondar.

* Fix #1172 - lighten color for dark theme, list-group-item colors.

* Fix #1172 - added utility class for adjusting the the color contrast for
accessibility.

* Fix #1172 - adjust color contrast only for 1).btn classes, 2) for
link-colors.

* Fix #1172 - added color-yiq call for list-group-item-dark.

* Merge branch 'task/issue_1172_dark_theme_color_contrast' of https://github.com/servicecatalog/oscm.git into task/issue_1172_dark_theme_color_contrast

* Fix #1172 - added btn-classes only for dark theme.

* Fix #1172 - moved adjusted-primary and adjusted-secondary to
_toggled_themed_vars.

* Fix #1172 - applied review comment.

* Fix #1172 - fix for subscription status text-color on hover.

* Fix #1172 - fix hover color for subscription status.

* Fix #1172 - use correct button-variant class to override button style.

* Fix #1172 - dark text-color on sub

--- a/oscm-portal/WebContent/marketplace/customBootstrap/scss/_darkVariables.scss
+++ b/oscm-portal/WebContent/marketplace/customBootstrap/scss/_darkVariables.scss
@@ -1,3 +1,5 @@
+@import "./basic/color_contrast_utilities";
+
 $enable-dark-navigation: true;
 $enable-dark-theme: false;
 
@@ -27,13 +29,6 @@ $card-hover-color: $dark-lighter;
 $card-bg-color: $dark-lightest;
 
 @import "toggled_theme_vars";
-
-// Link colors.
-$link-color: $secondary;
-$link-hover-color: $secondary;
-
-// Breadcrumbs
-$breadcrumb-active-color:  $secondary;
 
 // Dropdowns
 $dropdown-link-active-bg: $primary;
@@ -72,6 +67,10 @@ $list-group-action-active-bg:       $primary;
 
 .list-group-item {
    color: $light;
+}
+
+.list-group-item-dark {
+  color: color-yiq($dark);
 }
 
 // Modal dialogs
