--- a/oscm-portal/WebContent/marketplace/customBootstrap/scss/_toggled_theme_vars.scss
+++ b/oscm-portal/WebContent/marketplace/customBootstrap/scss/_toggled_theme_vars.scss
@@ -4,9 +4,20 @@ $body-bg: if($enable-dark-theme, $black, $white);
 // Breadcrumbs
 $theme-breadcrumb-bg: if($enable-dark-theme, $body-bg, $color_athens_gray_approx);
 
+// Breadcrumbs
+$breadcrumb-active-color: if($enable-dark-theme, lighten($secondary, 20%), $secondary);
+
 // General theme 
 $theme-border-color: if($enable-dark-theme, $dark, $color_gallery_approx);
 $theme-bg-color: if($enable-dark-theme, $dark-lightest, $white);
+
+$main-color-for-theme: if($enable-dark-theme, adjust-color-contrast($main-color, $dark), $main-color);
+$adjusted-primary: $main-color-for-theme;
+$adjusted-secondary: $main-color-for-theme;
+
+// Link colors.
+$link-color: $adjusted-secondary;
+$link-hover-color: $link-color;
 
 // Cards
 $theme-card-bg: if($enable-dark-theme, $card-bg-color, $white);
