--- a/oscm-portal/WebContent/marketplace/customBootstrap/scss/components/_themed_classes.scss
+++ b/oscm-portal/WebContent/marketplace/customBootstrap/scss/components/_themed_classes.scss
@@ -1,7 +1,6 @@
 $toggled_navigation_theme: if($enable-dark-navigation, "dark", "light");
 $toggled_theme: if($enable-dark-theme, "dark", "light");
 
- 
 .navbar-themed  {
   @extend .bg-#{$toggled_navigation_theme};
   @extend .navbar-#{$toggled_navigation_theme};
@@ -18,4 +17,19 @@ $toggled_theme: if($enable-dark-theme, "dark", "light");
 .border-themed {
   @extend .border-#{$toggled_theme};
 }
-   
+
+@if $enable-dark-theme {
+  .btn-primary {
+     @include button-variant($adjusted-primary, $adjusted-primary);
+  }
+  .btn-secondary {
+     @include button-variant($adjusted-secondary, $adjusted-secondary);
+  }
+
+  .btn-outline-primary {
+    @include button-variant($adjusted-primary, $adjusted-primary);
+  }
+  .btn-outline-secondary {
+    @include button-variant($adjusted-secondary, $adjusted-secondary);
+  }
+}
